drm/i915/splash: Add support for a splash screen image. (v9)
This feature loads a raw ARGB888 image from a firmware, maps it via the
GTT(copyless) and displays it in the given area of the specified connector,
the image is scaled if the source dimension is differnt than destination
rectangle.

V2: allocate 1 framebuffer and share between displays. [Bob]
V3: Specify the splash data, dimentions and crtc rectangle in a formatted
    module parameter with the syntax:

 splash=<connector>:<image_data>:width,height,pitch,crtc_x,crtc_y,crtc_w,crtc_h

    With this change, only one image on one connector is supported. [Bob]
V4: disable planes and commit the state before shutting down [Bob]
V5: Dont' unreference existing fb until we commit new state (James/Bob)
V6: Remove conditions around various free's (Matt)
    Remove connection mutex lock in destroy (Matt)
    Remove pin_and_fence_fb_obj() call (Matt)
    Add comments around empty gem_[put/get]_pages (Matt)
V7: Page align firmware size (James)
    For built-in image firmware, don't add 1 page (James)
V8: Remove duplicate conversion from page size to number of pages (James)
V9: Fix module paramter syntax to match code (Matt)
    Change uint8_t * to const u8 * in i915_gem_object_create_splash (Matt)
    Remove "encoder->crtc->state->enable = true;"  (Matt)
    Add warning if splash pointer from firwmware isn't page aligned (Matt)
    Use DIV_ROUND_UP_ULL to convert size to pages (Matt)

Signed-off-by: James Xiong <james.xiong@intel.com>
Signed-off-by: Bob Paauwe <bob.j.paauwe@intel.com>
Reviewed-by: James Xiong <james.xiong@intel.com>
Reviewed-by: Bob Paauwe <bob.j.paauwe@intel.com>
Reviewed-by: Matt Roper <matthew.d.roper@intel.com>
[mattrope: Removed extra newline at end of i915_gem_splash.c]
Signed-off-by: Matt Roper <matthew.d.roper@intel.com>

--- a/drivers/gpu/drm/i915/Makefile
+++ b/drivers/gpu/drm/i915/Makefile
@@ -32,6 +32,7 @@ i915-y += i915_cmd_parser.o \
 	  i915_gem_render_state.o \
 	  i915_gem_shrinker.o \
 	  i915_gem_stolen.o \
+	  i915_gem_splash.o \
 	  i915_gem_tiling.o \
 	  i915_gem_userptr.o \
 	  i915_gpu_error.o \
