drm/i915: Perfmon support for gen9
This patch implements Perfmon IOCTLs for gen9 (BXT).
Changes are required for supporting MDAPI used by such
tools as GPA.

Based on Android implementation.

Perfmon open/close IOCTL
Perfmon must be opened in order to set global perfmon
configuration and to get list of HW context IDs for arbitrary
context.

Reporting IOCTL of HW context
Enables user to get hardware context id for given context
(identified by user handle) as well as to query for list
of hardware context ids for arbitrary process (identified
by PID). This is needed for matching Perfmon sample from HW
with application/process/context. Perfmon must be opened
for given fd to enable caller to get list of HW context
IDs for arbitrary context.

Writing OA / Perfmon configuration to ring buffer
Some registers for OA configuration are part of context and
thus need to be written via LRIs inserted to the ring buffer.
It is convenient to send all OA configuration registers this way
since it enables us to implement multiconfiguration, meaning
multiple users each using different OA config. To have this
working programming of per-context workaround batch buffers
is required.

Storing process ID information in intel_context.

Permitting user to pin/unpin a buffer using
I915_PERFMON_PIN_OA_BUFFER / I915_PERFMON_UNPIN_OA_BUFFER.

Signed-off-by: Andrzej Datczuk <andrzej.datczuk@intel.com>
Signed-off-by: Matt Roper <matthew.d.roper@intel.com>
(cherry picked from commit 2cabedb47a0313acaeda1c3f506c4e8b7641d073)
Signed-off-by: Matt Roper <matthew.d.roper@intel.com>

Conflicts:
	drivers/gpu/drm/i915/i915_dma.c
	drivers/gpu/drm/i915/i915_drv.h
	drivers/gpu/drm/i915/intel_lrc.c

--- a/drivers/gpu/drm/i915/Makefile
+++ b/drivers/gpu/drm/i915/Makefile
@@ -101,6 +101,9 @@ i915-y += i915_vgpu.o
 # legacy horrors
 i915-y += i915_dma.o
 
+# perfmon
+i915-y += i915_perfmon.o
+
 obj-$(CONFIG_DRM_I915)  += i915.o
 
 CFLAGS_i915_trace_points.o := -I$(src)
