AXM SRIO: Added the support for sRIO hardware in the AXM56xx chips. The SRIO mport driver is modified to support local and remote configuration register access, Direct IO and Messaging transactions for all the Axxia chipset (55xx and 56xx) variants.
Signed-off-by: Palani <palaniappan.ramanathan@intel.com>

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -288,6 +288,15 @@ source "drivers/pci/Kconfig"
 source "drivers/pci/pcie/Kconfig"
 source "drivers/pci/hotplug/Kconfig"
 
+config RAPIDIO
+       bool "RapidIO support"
+       depends on PCI
+       help
+        If you say Y here, the kernel will include drivers and
+        infrastructure code to support RapidIO interconnect devices.
+
+source "drivers/rapidio/Kconfig"
+
 endmenu
 
 menu "Kernel Features"
