--- a/arch/arm64/configs/axxia_xlf_defconfig
+++ b/arch/arm64/configs/axxia_xlf_defconfig
@@ -72,6 +72,7 @@ CONFIG_BLK_DEV_RAM_SIZE=35000
 CONFIG_VIRTIO_BLK=y
 CONFIG_LSI_MTC=y
 CONFIG_LSI_NCR=y
+CONFIG_ARCH_AXXIA_NCR_RESET_CHECK=y
 CONFIG_AXXIA_PEI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
