--- a/arch/arm64/configs/axxia_x9_nosmp_dbg_defconfig
+++ b/arch/arm64/configs/axxia_x9_nosmp_dbg_defconfig
@@ -43,6 +43,26 @@ CONFIG_CMA=y
 CONFIG_CMDLINE="console=ttyAMA0"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
+CONFIG_RAPIDIO=y
+# CONFIG_RAPIDIO_TSI721 is not set
+CONFIG_AXXIA_RIO=y
+CONFIG_RIO_MAINT_WIN_SIZE=0x1000000
+CONFIG_AXXIA_RIO_STAT=y
+CONFIG_OB_DME_ENTRY_SIZE=4096
+CONFIG_RAPIDIO_DISC_TIMEOUT=30
+CONFIG_RAPIDIO_ENABLE_RX_TX_PORTS=y
+# CONFIG_RAPIDIO_DMA_ENGINE is not set
+CONFIG_RAPIDIO_DEBUG=y
+CONFIG_RAPIDIO_ENUM_BASIC=y
+#
+# RapidIO Switch drivers
+#
+# CONFIG_RAPIDIO_TSI57X is not set
+CONFIG_RAPIDIO_CPS_XX=y
+# CONFIG_RAPIDIO_TSI568 is not set
+CONFIG_RAPIDIO_CPS_GEN2=y
+CONFIG_RIONET=y
+#
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
