axxia: Update the Default Configurations for 5600 and 6700
Add kexec/kdump support.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/arch/arm64/configs/axxia_x9_rt_dbg_defconfig
+++ b/arch/arm64/configs/axxia_x9_rt_dbg_defconfig
@@ -36,33 +36,24 @@ CONFIG_ARCH_VEXPRESS=y
 CONFIG_ARCH_XGENE=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
+CONFIG_RAPIDIO=y
+CONFIG_AXXIA_RIO=y
+CONFIG_RIO_MAINT_WIN_SIZE=0x1000000
+CONFIG_AXXIA_RIO_STAT=y
+CONFIG_RAPIDIO_ENABLE_RX_TX_PORTS=y
+CONFIG_RAPIDIO_DEBUG=y
+CONFIG_RAPIDIO_ENUM_BASIC=y
+CONFIG_RAPIDIO_CPS_XX=y
+CONFIG_RAPIDIO_CPS_GEN2=y
 CONFIG_SMP=y
 CONFIG_PREEMPT_RT_FULL=y
 CONFIG_KSM=y
 CONFIG_CMA=y
+CONFIG_KEXEC=y
+CONFIG_CRASH_DUMP=y
 CONFIG_CMDLINE="console=ttyAMA0"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
-CONFIG_RAPIDIO=y
-# CONFIG_RAPIDIO_TSI721 is not set
-CONFIG_AXXIA_RIO=y
-CONFIG_RIO_MAINT_WIN_SIZE=0x1000000
-CONFIG_AXXIA_RIO_STAT=y
-CONFIG_OB_DME_ENTRY_SIZE=4096
-CONFIG_RAPIDIO_DISC_TIMEOUT=30
-CONFIG_RAPIDIO_ENABLE_RX_TX_PORTS=y
-# CONFIG_RAPIDIO_DMA_ENGINE is not set
-CONFIG_RAPIDIO_DEBUG=y
-CONFIG_RAPIDIO_ENUM_BASIC=y
-#
-# RapidIO Switch drivers
-#
-# CONFIG_RAPIDIO_TSI57X is not set
-CONFIG_RAPIDIO_CPS_XX=y
-# CONFIG_RAPIDIO_TSI568 is not set
-CONFIG_RAPIDIO_CPS_GEN2=y
-CONFIG_RIONET=y
-
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -102,6 +93,7 @@ CONFIG_AHCI_XGENE=y
 CONFIG_PATA_PLATFORM=y
 CONFIG_PATA_OF_PLATFORM=y
 CONFIG_NETDEVICES=y
+CONFIG_RIONET=y
 CONFIG_TUN=y
 CONFIG_VIRTIO_NET=y
 CONFIG_NET_XGENE=y
