--- a/arch/arm64/configs/axxia_xlf_rt_defconfig
+++ b/arch/arm64/configs/axxia_xlf_rt_defconfig
@@ -37,10 +37,21 @@ CONFIG_ARCH_VEXPRESS=y
 CONFIG_ARCH_XGENE=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
+CONFIG_RAPIDIO=y
+CONFIG_AXXIA_RIO=y
+CONFIG_RIO_MAINT_WIN_SIZE=0x1000000
+CONFIG_AXXIA_RIO_STAT=y
+CONFIG_RAPIDIO_ENABLE_RX_TX_PORTS=y
+CONFIG_RAPIDIO_DEBUG=y
+CONFIG_RAPIDIO_ENUM_BASIC=y
+CONFIG_RAPIDIO_CPS_XX=y
+CONFIG_RAPIDIO_CPS_GEN2=y
 CONFIG_SMP=y
 CONFIG_PREEMPT_RT_FULL=y
 CONFIG_KSM=y
 CONFIG_CMA=y
+CONFIG_KEXEC=y
+CONFIG_CRASH_DUMP=y
 CONFIG_CMDLINE="console=ttyAMA0"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
@@ -72,7 +83,6 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_LSI_MTC=y
 CONFIG_LSI_NCR=y
 CONFIG_ARCH_AXXIA_NCR_RESET_CHECK=y
-CONFIG_AXXIA_DSPC=y
 CONFIG_AXXIA_PEI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
@@ -84,6 +94,7 @@ CONFIG_AHCI_XGENE=y
 CONFIG_PATA_PLATFORM=y
 CONFIG_PATA_OF_PLATFORM=y
 CONFIG_NETDEVICES=y
+CONFIG_RIONET=y
 CONFIG_TUN=y
 CONFIG_VIRTIO_NET=y
 CONFIG_NET_XGENE=y
