--- a/arch/arm64/configs/axxia_x9_rt_nosmp_defconfig
+++ b/arch/arm64/configs/axxia_x9_rt_nosmp_defconfig
@@ -81,6 +81,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_LSI_MTC=y
 CONFIG_LSI_NCR=y
 CONFIG_ARCH_AXXIA_NCR_RESET_CHECK=y
+CONFIG_AXXIA_OEM=y
 CONFIG_AXXIA_PEI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
