--- a/arch/arm64/configs/axxia_xlf_defconfig
+++ b/arch/arm64/configs/axxia_xlf_defconfig
@@ -75,7 +75,7 @@ CONFIG_VIRTIO_BLK=y
 CONFIG_LSI_MTC=y
 CONFIG_LSI_NCR=y
 CONFIG_ARCH_AXXIA_NCR_RESET_CHECK=y
-CONFIG_AXXIA_DSPC=y
+CONFIG_AXXIA_OEM=y
 CONFIG_AXXIA_PEI=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
